# state-engine

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  composer.json  publish.sh
archive/: Makefile  docker-compose.yml
archive/app/: repl.js  schema.js  test.js
archive/app/manifest/: cache.yml  connection.yml  database.yml
archive/postgres/: migrate.sh
archive/postgres/migrations/: 001_create_organizations.sql  002_create_tenants.sql  003_create_admins.sql  004_create_tenant_users.sql
archive/postgres/seeds/: 001_seed_organizations.sql  002_seed_tenants.sql  003_seed_admins.sql  004_seed_tenant_users.sql
archive/rust/: Dockerfile
core/: Cargo.toml
core/src/: codec.rs  common.rs  fixed_bits.rs  lib.rs  parser.rs  pool.rs  value.rs
core/src/common/: bit.rs  codec.rs  fixed_bits.rs  parser.rs  pool.rs
crate/: Cargo.toml
crate/examples/adapters/: env_client.rs  http_client.rs  in_memory.rs  mod.rs
crate/examples/app/: Dockerfile  README.md  docker-compose.yml  run.sh
crate/src/: common.rs  lib.rs  load.rs  manifest.rs  state.rs  store.rs
crate/src/common/: log_format.rs
crate/src/core/: codec.rs  mod.rs
crate/src/ports/: default.rs  provided.rs  required.rs
docs/: Architecture.md  DSL-guide.md  DSL_guide.md
docs/en/: Architecture.md  YAML-guide.md
docs/ja/: Architecture.md  README.md  YAML-guide.md
examples/: tenant.yml
examples/adapters/: README.md  db_client.rs  env_client.rs  http_client.rs  in_memory.rs  kvs_client.rs  mod.rs
examples/app/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/app/db/: 000_create_databases.sh  001_init.sql
examples/app/db/migrations/: 001_init.sql
examples/app/src/: adapters.rs  main.rs  test_runner.rs
examples/manifest/: cache.yml  connection.yml  session.yml
js/: Cargo.toml  package.json
js/examples/manifest/: event.yml  view.yml
js/src/: lib.rs
php/: Cargo.toml  composer.json
php/examples/: CustomDatabaseManager.php  ManageConnection.php  test-get-routes.sh
php/examples/Adapters/: DBAdapter.php  ENVAdapter.php  InMemoryAdapter.php  KVSAdapter.php
php/src/: lib.rs
rust/src/: common.rs
samples/adapters/: README.md  db_client.js  env_client.rs  in_memory.js  in_memory.rs  kvs_client.js  mod.rs  process_memory.js
samples/app/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.js  package-lock.json  package.json
samples/app/adapters/: README.md  db_client.js  env_client.js
samples/app/db/migrations/: 001_init.sql
samples/app/src/: adapters.rs  main.rs
samples/manifest/: cache.yml  connection.yml  database.yml  session.yml  state.yml
src/: codec_value.rs  common.rs  lib.rs  load.rs  log_format.rs  manifest.rs  ports.rs  state.rs  store.rs
src/common/: bi_map.rs  bit.rs  dot_array_accessor.rs  dot_map_accessor.rs  dot_string.rs  index.rs  log_format.rs  manifest.rs  parser.rs  placeholder.rs  placeholder_resolver.rs  pool.rs  state.rs
src/core/: codec.rs  fixed_bits.rs  manifest.rs  mod.rs  parser.rs  pool.rs
src/load/: mod.rs
src/manifest/: main.rs  manifest.rs  mod.rs
src/ports/: default.rs  mod.rs  provided.rs  required.rs
src/state/: mod.rs  parameter_builder.rs  resolver.rs
tests/: integration_tests.rs  serde_convert_test.rs  test_placeholder_resolution.rs
tests/integration/: common_state_test.rs  common_test.rs  edge_cases_test.rs  log_format_test.rs  manifest_test.rs  mod.rs  placeholder_normalization_test.rs  placeholder_qualify_test.rs  state_load_without_client_test.rs  state_test.rs
tests/mocks/: clients.rs  logger.rs  mod.rs
wasi/: Cargo.toml  wasmer.toml
wasi/src/: lib.rs
wasm/: Cargo.toml
(+22 files in other folders)
