[workspace]
members = [
    "core",
    "crate",
    "crate/examples/app"
]
resolver = "2"

[workspace.package]
name = "state-engine"
version = "0.1.4"
authors = ["Andyou <andyou@animagram.jp>"]
description = "Declarative state data management system for process"
edition = "2024"
license = "MIT"

[workspace.dependencies]
core={ path = "./core" }