[package]
name = "context-engine"
version = "0.1.6-alpha.1"
authors = ["Andyou <andyou@animagram.jp>"]
description = "Declarative state data management system for process"
edition = "2024"
license = "MIT"

repository = "https://github.com/animagram-jp/context-engine"
homepage = "https://github.com/animagram-jp/"
readme = "README.md"
keywords = ["context", "namespace", "yaml", "addressing"]
categories = ["config", "data-structures", "template-engine", "parser-implementations", "web-programming"]
exclude = ["examples/*"]

[dependencies]
log = { version = "0.4", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }

[dev-dependencies]
env_logger = "0.11"
ctor = "0.2"

[features]
default = []
logging = ["log"]
builder   = ["serde_yaml_ng"]