[package]
name = "js-binding"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/animagram-jp/state-engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { workspace = true }
state-engine = { path = "../crate" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"