[package]
name = "state-engine-wasm"
version = "0.1.3"
authors = ["Andyou <qebju@animagram.jp>"]
edition = "2024"
license = "MIT"
description = "WASM binding for state-engine"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
state-engine-core = { path = "../core" }
state-engine = { path = "../rust" }
