[package]
name = "state-engine-sample"
version = "0.1.0"
edition = "2024"
description = "Sample application using state-engine"
license = "MIT"

[[bin]]
name = "state-engine-sample"
path = "src/main.rs"

[[bin]]
name = "state-engine-test"
path = "src/test_runner.rs"

[dependencies]
state-engine = { path = "../.." }
serde_json = "1.0"
env_logger = "0.11"
redis = "0.24"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
