[package]
name = "state-engine-sample"
version = "0.1.0"
edition = "2024"
description = "Sample application using state-engine"
license = "MIT"

[[bin]]
name = "state-engine-sample"
path = "src/main.rs"

[dependencies]
state-engine = { path = "../.." }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
redis = "0.24"
tokio-postgres = "0.7"

[dev-dependencies]
